# Polygone-Renderer

./: CMakeLists.txt  README.md  conanfile.txt
Headers/: Core.hpp  SwapChainSupportDetails.hpp
Src/: Core.cpp  QueueFamilyIndices.cpp  main.cpp
header/: Core.hpp  QueueFamilyIndices.hpp
headers/: QueueFamilyIndices.hpp  vk-draft.hpp
headers/core/: CommandBuffers.hpp  Core.hpp  Debug.hpp  Device.hpp  Framebuffers.hpp  GraphicsPipeline.hpp  Instance.hpp  QueueFamilyIndices.hpp  RenderPass.hpp  Surface.hpp  SwapChainSupportDetails.hpp  Swapchain.hpp  SwapchainImageViews.hpp  SwapchainSupportDetails.hpp  Synchronization.hpp  Vertex.hpp  VertexBuffer.hpp  Window.hpp
headers/core/deprecated/: _Core.hpp  _QueueFamilyIndices.hpp
headers/engine/: Engine.hpp  Window.hpp
headers/fake_dir/: Core.hpp
headers/global/: Constants.hpp
headers/gui/: Engine.hpp
headers/utils/: ExtentionsUtils.hpp  ShadersUtils.hpp
source/: Core.cpp  QueueFamilyIndices.cpp  SwapChainSupportDetails.cpp
src/: draft-vk.cpp  vk-draft.cpp
src/core/: CommandBuffers.cpp  Core.cpp  Debug.cpp  Device.cpp  Framebuffers.cpp  GraphicsPipeline.cpp  Instance.cpp  QueueFamilyIndices.cpp  RenderPass.cpp  Surface.cpp  SwapChainSupportDetails.cpp  Swapchain.cpp  SwapchainImageViews.cpp  SwapchainSupportDetails.cpp  Synchronization.cpp  Vertex.cpp  VertexBuffer.cpp  Window.cpp
src/core/deprecated/: _Core.cpp  _QueueFamilyIndices.cpp
src/core/utils/: ShadersUtils.cpp
src/engine/: Engine.cpp  Window.cpp
src/fake_dir/: Core.cpp
src/gui/: Engine.cpp
src/utils/: ExtentionsUtils.cpp
